--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Some plugin will be broken without this -->
   <meta charset="utf-8">
+
+  <!-- This is essential for media queries to work -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
   <title>Danh's Porfolio</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -105,7 +111,7 @@
               </div>
             </div>
 
-            <div class="col-md-8 col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="col-md-8 col-lg-4 wow fadeInUp" data-wow-delay="0.9s">
               <div class="about-col">
                 <div class="img">
                   <img src="./images/activities.jpg" alt="" class="img-fluid">
@@ -134,7 +140,7 @@
       <section id="skills">
         <div class="container stretch100vh d-flex flex-column justify-content-md-center align-items-center">
 
-          <header class="section-header wow fadeInDown" style="margin-top: 60px;">
+          <header class="section-header wow fadeInDown" style="margin-top: auto;">
             <h3 class="text-white">Skills</h3>
             <br>
             <br>
@@ -142,7 +148,7 @@
           </header>
 
           <div class="row justify-content-md-center">
-            <div class="col-lg-8 col-md-8 box wow bounceInUp skill-block" data-wow-duration="1s">
+            <div class="col-lg-8 col-md-8 box wow fadeInUp skill-block" data-wow-duration="0.3s">
               <h5 class="title text-center"><a href="">Languages</a></h5>
               <div class="row justify-content-around align-items-center">
 
@@ -159,7 +165,7 @@
             </div>
 
 
-            <div class="col-lg-8 col-md-8 box wow bounceInUp skill-block" data-wow-duration="1.5s">
+            <div class="col-lg-8 col-md-8 box wow fadeInUp skill-block" data-wow-duration="0.6s">
               <h4 class="title text-center"><a href="">Web Frameworks</a></h4>
               <div class="row justify-content-around align-items-center">
                 <div class="col-1 icon"><span class="iconify" data-icon="logos:react"
@@ -189,7 +195,7 @@
               <p class="description text-md-center"> Reactjs, Angular, HTML5<br>CSS3, Bootstrap4, Nodejs<br>JQuery, MySQL</p>
             </div>
 
-            <div class="col-lg-8 col-md-8 box wow bounceInUp skill-block" data-wow-duration="2.3s">
+            <div class="col-lg-8 col-md-8 box wow fadeInUp skill-block" data-wow-duration="0.9s">
               <h4 class="title text-sm-center"><a href="">Technologies</a></h4>
               <div class="row justify-content-around align-items-center">
 
@@ -223,93 +229,93 @@
 
         <div class="stretch100vh d-flex flex-column align-items-center justify-content-center">
 
-        <div class="container d-flex flex-column align-items-center">
-          <div class="row wow fadeInDown">
+          <div class="container d-flex flex-column align-items-center">
+            <div class="row wow fadeInDown">
 
-            <header class="section-header">
-              <h3 class="section-title text-white">Projects</h3>
-              <br><br>
-              <p class="text-center h5">Projects I have done or working on..</p>
-            </header>
+              <header class="section-header">
+                <h3 class="section-title text-white">Projects</h3>
+                <br><br>
+                <p class="text-center h5">Projects I have done or working on..</p>
+              </header>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12">
+                <ul id="projects-flters">
+                  <li data-filter="*" class="filter-active">All</li>
+                  <li data-filter=".filter-tmus">T-Mobile</li>
+                  <li data-filter=".filter-cave">Cave Consulting</li>
+                  <li data-filter=".filter-others">Others</li>
+                </ul>
+              </div>
+            </div>
           </div>
 
-          <div class="row">
-            <div class="col-lg-12">
-              <ul id="projects-flters">
-                <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-tmus">T-Mobile</li>
-                <li data-filter=".filter-cave">Cave Consulting</li>
-                <li data-filter=".filter-others">Others</li>
-              </ul>
+          <div class="container">
+            <div class="row projects-container">
+              <div class="col-lg-6 col-md-6 projects-item filter-tmus wow fadeInUp">
+                <div class="projects-wrap">
+                  <figure>
+                    <img src="./images/tmus1.jpg" class="img-fluid" alt="">
+                    <button type="button" class="btn btn-outline-success link-details" data-toggle="modal" data-target="#tmus1Details">
+                      Details
+                    </button>
+                  </figure>
+
+                  <div class="projects-info">
+                    <h4><a href="#">Anomaly Detection AI System</a></h4>
+                    <!-- <p>TMUS 1</p> -->
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-md-6 projects-item filter-tmus wow fadeInUp" data-wow-delay="0.1s">
+                <div class="projects-wrap">
+                  <figure>
+                    <img src="./images/tmus2.png" class="img-fluid" alt="">
+                    <button type="button" class="btn btn-outline-success link-details" data-toggle="modal" data-target="#tmus2Details">
+                      Details
+                    </button>
+                  </figure>
+
+                  <div class="projects-info">
+                    <h4><a href="#">Retail Experience Dashboard</a></h4>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-md-6 projects-item filter-cave wow fadeInUp" data-wow-delay="0.2s">
+                <div class="projects-wrap">
+                  <figure>
+                    <img src="./images/cave1.png" class="img-fluid" alt="">
+                    <button type="button" class="btn btn-outline-success link-details" data-toggle="modal" data-target="#cave1Details">
+                      Details
+                    </button>
+                  </figure>
+
+                  <div class="projects-info">
+                    <h4><a href="#">Ticket Help-Desk System</a></h4>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-md-6 projects-item filter-cave wow fadeInUp">
+                <div class="projects-wrap">
+                  <figure>
+                    <img src="./images/cave2.png" class="img-fluid" alt="">
+                    
+                    <button type="button" class="btn btn-outline-success link-details" data-toggle="modal" data-target="#cave2Details">
+                      Details
+                    </button>
+                  </figure>
+
+                  <div class="projects-info">
+                    <h4><a href="#">Customer Interactive Ticket Help-Desk Website</a></h4>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-
-        <div class="container">
-          <div class="row projects-container">
-            <div class="col-lg-6 col-md-6 projects-item filter-tmus wow fadeInUp">
-              <div class="projects-wrap">
-                <figure>
-                  <img src="./images/tmus1.jpg" class="img-fluid" alt="">
-                  <button type="button" class="btn btn-outline-success link-details" data-toggle="modal" data-target="#tmus1Details">
-                    Details
-                  </button>
-                </figure>
-
-                <div class="projects-info">
-                  <h4><a href="#">Anomaly Detection AI System</a></h4>
-                  <!-- <p>TMUS 1</p> -->
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-6 col-md-6 projects-item filter-tmus wow fadeInUp" data-wow-delay="0.1s">
-              <div class="projects-wrap">
-                <figure>
-                  <img src="./images/tmus2.png" class="img-fluid" alt="">
-                  <button type="button" class="btn btn-outline-success link-details" data-toggle="modal" data-target="#tmus2Details">
-                    Details
-                  </button>
-                </figure>
-
-                <div class="projects-info">
-                  <h4><a href="#">Retail Experience Dashboard</a></h4>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-6 col-md-6 projects-item filter-cave wow fadeInUp" data-wow-delay="0.2s">
-              <div class="projects-wrap">
-                <figure>
-                  <img src="./images/cave1.png" class="img-fluid" alt="">
-                  <button type="button" class="btn btn-outline-success link-details" data-toggle="modal" data-target="#cave1Details">
-                    Details
-                  </button>
-                </figure>
-
-                <div class="projects-info">
-                  <h4><a href="#">Ticket Help-Desk System</a></h4>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-6 col-md-6 projects-item filter-cave wow fadeInUp">
-              <div class="projects-wrap">
-                <figure>
-                  <img src="./images/cave2.png" class="img-fluid" alt="">
-                  
-                  <button type="button" class="btn btn-outline-success link-details" data-toggle="modal" data-target="#cave2Details">
-                    Details
-                  </button>
-                </figure>
-
-                <div class="projects-info">
-                  <h4><a href="#">Customer Interactive Ticket Help-Desk Website</a></h4>
-                </div>
-              </div>
-            </div>
-            </div>
-            </div>
         </div>
       </section><!-- #projects -->
 
