--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <title>Danh's Porfolio</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
@@ -147,8 +148,9 @@
             <p class="h5">Some languages, frameworks, and technologies I'm using or familiar with..</p>
           </header>
 
-          <div class="row justify-content-md-center">
-            <div class="col-lg-8 col-md-8 box wow fadeInUp skill-block" data-wow-duration="0.3s">
+          <div class="row justify-content-center">
+            
+            <div class="col-lg-8 box wow fadeInUp skill-block" data-wow-duration="0.3s">
               <h5 class="title text-center"><a href="">Languages</a></h5>
               <div class="row justify-content-around align-items-center">
 
@@ -161,13 +163,13 @@
                 <div class="col-1 icon"><span class="iconify" data-icon="logos:graphql" data-inline="false"></span>
                 </div>
               </div>
-              <p class="description text-md-center">C++, Python 3, JavaScript<br> PHP, GraphQL</p>
+              <p class="description text-center">C++, Python 3, JavaScript<br> PHP, GraphQL</p>
             </div>
 
 
-            <div class="col-lg-8 col-md-8 box wow fadeInUp skill-block" data-wow-duration="0.6s">
+            <div class="col-lg-5 box wow fadeInUp skill-block" data-wow-duration="0.6s">
               <h4 class="title text-center"><a href="">Web Frameworks</a></h4>
-              <div class="row justify-content-around align-items-center">
+              <div class="row justify-content-around">
                 <div class="col-1 icon"><span class="iconify" data-icon="logos:react"
                     data-inline="false"></span></div>
                 <div class="col-1 icon"><span class="iconify" data-icon="logos:angular-icon"
@@ -180,7 +182,7 @@
                     data-inline="false"></span></div>
               </div>
 
-              <div class="row justify-content-around align-items-center">
+              <div class="row justify-content-around">
                 <div class="col-1 icon"><span class="iconify" data-icon="logos:nodejs"
                     data-inline="false"></span></div>
                 <div class="col-1 icon"><span class="iconify" data-icon="logos:jquery" data-inline="false"></span></span>
@@ -192,11 +194,11 @@
                 <div class="col-1 icon"><span class="iconify" data-icon="logos:mongodb" data-inline="false"></span>
                 </div>
               </div>
-              <p class="description text-md-center"> Reactjs, Angular, HTML5<br>CSS3, Bootstrap4, Nodejs<br>JQuery, MySQL</p>
+              <p class="description text-center"> Reactjs, Angular, HTML5<br>CSS3, Bootstrap4, Nodejs<br>JQuery, MySQL</p>
             </div>
 
-            <div class="col-lg-8 col-md-8 box wow fadeInUp skill-block" data-wow-duration="0.9s">
-              <h4 class="title text-sm-center"><a href="">Technologies</a></h4>
+            <div class="col-lg-5 box wow fadeInUp skill-block" data-wow-duration="0.9s">
+              <h4 class="title text-center"><a href="">Technologies</a></h4>
               <div class="row justify-content-around align-items-center">
 
                 <div class="col-1 icon"><span class="iconify" data-icon="logos:google-cloud-platform"
@@ -210,7 +212,7 @@
                 <div class="col-1 icon"><span class="iconify" data-icon="logos:github-icon"
                     data-inline="false"></span></div>
               </div>
-              <div class="text-sm-center">
+              <div class="text-center">
                 <p class="description">Google Echo-system Products<br>Google Cloud Services<br>(App-script, App-maker, Cloud
                   Function)<br>Github</p>
               </div>
@@ -343,10 +345,10 @@
             <div class="footer-links">
               <h4>Menu</h4>
               <ul>
-                <li><i class="ion-ios-arrow-right"></i> <a href="#">Home</a></li>
-                <li><i class="ion-ios-arrow-right"></i> <a href="#">About Me</a></li>
-                <li><i class="ion-ios-arrow-right"></i> <a href="#">Skills</a></li>
-                <li><i class="ion-ios-arrow-right"></i> <a href="#">Projects</a></li>
+                <li><i class="ion-ios-arrow-right"></i> <a href="#intro" class="scrollto">Home</a></li>
+                <li><i class="ion-ios-arrow-right"></i> <a href="#about" class="scrollto">About</a></li>
+                <li><i class="ion-ios-arrow-right"></i> <a href="#skills" class="scrollto">Skills</a></li>
+                <li><i class="ion-ios-arrow-right"></i> <a href="#projects" class="scrollto">Projects</a></li>
               </ul>
             </div>
           </div>
